--- a/app/src/main/res/layout/activity_save_playlist.xml
+++ b/app/src/main/res/layout/activity_save_playlist.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:fitsSystemWindows="true">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+    </android.support.design.widget.AppBarLayout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_marginTop="50dp"
     tools:context=".CreatePlaylistActivity">
-
     <!-- Login progress -->
     <ProgressBar
         android:id="@+id/save_progress"
@@ -55,7 +72,7 @@
                     android:id="@+id/atv_clip_tags"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Enter Category"
+                    android:hint="Enter Clip Tag"
                     android:inputType="text"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -74,4 +91,7 @@
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
